fix what exactly is responsible for the white space at the top

--- a/juniorguru/web/static/src/css/common.scss
+++ b/juniorguru/web/static/src/css/common.scss
@@ -77,13 +77,13 @@ body > * {
 
 main {
   @include page-width;
+  padding-top: $whitespace-3 * 3;
 }
 
 main > header, .job > header {
   max-width: 80rem;
   margin-left: auto;
   margin-right: auto;
-  margin-top: $whitespace-3 * 3;
 
   h1 {
     margin-top: 0;
@@ -575,7 +575,6 @@ ul.items {
 
 body > header {
   padding: 0;
-  margin-bottom: $whitespace-3;
   background: $yellow;
 
   nav {
@@ -660,7 +659,7 @@ body > header ol a:active {
 
 body.page-learn > header li:nth-child(1) a,
 body.page-practice > header li:nth-child(2) a,
-body.page-candidate > header li:nth-child(3) a,
+// body.page-candidate > header li:nth-child(3) a,
 body.page-jobs > header li:nth-child(3) a,
 body.page-job > header li:nth-child(3) a {
   &, &::before {
@@ -875,7 +874,9 @@ a.donate-option {
 body.page-jobs, body.page-job, body.page-donate {
   main {
     max-width: 100%;
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
   }
 
   main > header,
